--- a/assignment/AndroidAssignment/app/src/main/AndroidManifest.xml
+++ b/assignment/AndroidAssignment/app/src/main/AndroidManifest.xml
@@ -6,18 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAssignment">
-        <activity
-            android:name=".Home2Activity"
-            android:exported="true" />
-        <activity
-            android:name=".TestActivity"
-            android:exported="true" />
+
         <activity
             android:name=".SignUpActivity"
             android:exported="true" />
