--- a/again/app/build.gradle
+++ b/again/app/build.gradle
@@ -43,6 +43,13 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // gson
     implementation "com.google.code.gson:gson:2.8.6"
+    //7주차 세미나 navigation component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
