--- a/again/app/src/main/AndroidManifest.xml
+++ b/again/app/src/main/AndroidManifest.xml
@@ -2,32 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.sopt.study.againassignment">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgainAssignment">
+        android:theme="@style/Theme.AgainAssignment"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".SignUpActivity"
-            android:exported="false"
-            android:label="@string/title_activity_sign_up"
-            android:theme="@style/Theme.AgainAssignment.NoActionBar" />
-        <activity
-            android:name=".SignInActivity"
-            android:exported="false"
-            android:label="@string/title_activity_sign_in"
-            android:theme="@style/Theme.AgainAssignment.NoActionBar" />
-        <activity
-            android:name=".HomeActivity"
+            android:name=".ui.LoginsettingActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +24,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.SignUpActivity"
+            android:exported="false"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.AgainAssignment.NoActionBar" />
+        <activity
+            android:name=".ui.HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
